# cython_oracle

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
cython_oracle/: oracle.pyx
liboracle/src/: oracle.c  oracle.h
tests/: test_oracle.py
