[metadata]
name = cython_oracle
version = 0.0.1
description = Cython wrapper around an oracle library in C
long_description = file: README.md
long_description_content_type = text/markdown
author = Anton Helm
author_email = anton.helm@tecnico.ulisboa.pt
license = MIT

[options]
packages = find:
setup_requires =
    cython
install_requires =
include_package_data = True
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*
    testing*
